test/elaboration/bad/coreml_unbound_dcon_in_pattern.mle
let (main : int) = match 0 with K[] -> 0